--- a/style.css
+++ b/style.css
@@ -46,3 +46,11 @@ body {
     flex-basis: 320px; 
     flex-grow: 1;      
 }
+
+.carousel img{
+    width: 90px;
+    height: 600px;
+    margin: 50px;
+    border: 4px solid blue;
+    border-radius: 16px;
+}
